--- a/index.html
+++ b/index.html
@@ -11,32 +11,17 @@
   <body>
     <header>
       <h1>Your name</h1>
-      <img src="profile.png" alt="me" />
+      <img src="Good Lizzy Picture.jpg" alt="me" />
     </header>
     <main>
       <section>
         <h2>About me</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          I am Lizzy Linford, a math and econ student at BYU. I enjoy reading,
+          writing, hiking, playing the flute and music in general. Recently I 
+          have been getting into triathalons as well. 
         </p>
-        <p>
-          Cursus sit amet dictum sit amet justo donec enim. Volutpat blandit
-          aliquam etiam erat velit scelerisque. Vestibulum lorem sed risus
-          ultricies tristique nulla. Amet mattis vulputate enim nulla aliquet
-          porttitor. Tellus integer feugiat scelerisque varius morbi. Et tortor
-          at risus viverra adipiscing at in. Pellentesque habitant morbi
-          tristique senectus et. Donec ac odio tempor orci. At ultrices mi
-          tempus imperdiet nulla malesuada. Pellentesque pulvinar pellentesque
-          habitant morbi tristique senectus. Libero justo laoreet sit amet
-          cursus sit amet. Aliquet lectus proin nibh nisl condimentum. Sit amet
-          massa vitae tortor condimentum lacinia quis vel.
-        </p>
+      
         <p>
           Personalize this page to what you would like. This is your chance to
           experiment and show off how awesome you are.
@@ -57,23 +42,22 @@
       </section>
       <section>
         <h2>Web programming assignments</h2>
-        <p>Replace the links below with your CodePen links.</p>
         <h3>HTML</h3>
         <ul>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/abKYRqN">Introduction</a>
+            <a href="https://codepen.io/lizzyLinGitHub/pen/abjRxgP">Introduction</a>
             - Basic HTML page example
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/GRGBqbw">Structure</a> -
+            <a href="https://codepen.io/lizzyLinGitHub/pen/wvxYbGe">Structure</a> -
             All the elements for creating page structure
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/dyVdNej">Input</a> - All
+            <a href="https://codepen.io/lizzyLinGitHub/pen/oNMOZaw">Input</a> - All
             the elements for receiving user input
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/OJEwgBa">Media</a> - All
+            <a href="https://codepen.io/lizzyLinGitHub/pen/JjBVXqa">Media</a> - All
             the elements for rendering media objects
           </li>
         </ul>
